# vimIn

./: .gitignore  CLAUDE.md  README-zh.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  release.sh  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-05-help-modal.md  2026-04-05-history-persistence-highlighting.md
docs/superpowers/specs/: 2026-04-05-history-persistence-highlighting-design.md
public/: toast.html
scripts/: sync-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: HelpModal.tsx  HistoryList.tsx  ShortcutDisplay.tsx  ShortcutRecorder.tsx  StatusBar.tsx  TitleBar.tsx  VimEditor.tsx
